<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.spacetimeinsight.bbgdemo.ProfileActivity">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/screen_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/profile_image">

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/profile_picture"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:minHeight="200dp"
        android:minWidth="200dp"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/profile_missing"/>
    <EditText
            android:id="@+id/screen_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/your_screen_name"
            android:layout_marginTop="21dp"
            android:layout_below="@+id/linear_layout"
            android:layout_alignParentStart="true"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_layout"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true">

        <Button
            android:id="@+id/pickPictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:onClick="pickImage"
            android:text="@string/pick_image"/>

        <Button
            android:id="@+id/takePhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="takePhoto"
            android:text="@string/take_photo"/>
    </LinearLayout>

    <Button
        android:id="@+id/saveProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:width="200dp"
        android:clickable="true"
        android:onClick="saveProfile"
        android:text="@string/save"/>

</RelativeLayout>
