<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_create_partition"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.spacetimeinsight.bbgdemo.CreatePartitionActivity">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true" android:layout_alignParentStart="true">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/partitionKeyField"
                        android:layout_marginBottom="10dp"/>
                <TextView
                        android:text="@string/create_new_partition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:textSize="24sp"
                        android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/partition_name"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView10"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:layout_width="140dp"
                        android:layout_gravity="center_vertical"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/partName1Field"
                        android:layout_weight="1"
                        android:hint="@string/e_g_myapp"
                />
            </LinearLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="App Name:"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:layout_width="140dp"
                        android:layout_gravity="center_vertical"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/appNameField"
                        android:layout_weight="3.03"
                        android:hint="@string/e_g_my_application"/>
            </LinearLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="Support Email:"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:layout_width="140dp"
                        android:layout_gravity="center_vertical"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/supportEmailField"
                        android:layout_weight="3.03"
                        android:hint="@string/e_g_acme_com"/>
            </LinearLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/company_name"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView11"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:layout_width="140dp"
                        android:layout_gravity="center_vertical"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/companyNameField"
                        android:layout_weight="1"
                        android:hint="@string/e_g_acme_software"/>
            </LinearLayout>
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent">
            <Button
                    android:text="@string/create_partition"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/createPartButton"
                    android:layout_weight="1"
                    android:layout_marginBottom="50dp"
                    android:onClick="createPartition"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/or_find_and_join_partition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:textSize="24sp"
                    android:layout_marginBottom="10dp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/partition_name"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView13"
                        android:layout_weight="1"
                        android:textSize="18sp" android:layout_marginBottom="10dp"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:layout_weight="1"
                        android:hint="@string/e_g_myapp"
                        android:id="@+id/partName2Field"/>
            </LinearLayout>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/find_partition"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/findPartButton"
                    android:layout_weight="1"
                    android:onClick="findPartition"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
